--- a/css/style.css
+++ b/css/style.css
@@ -11,7 +11,7 @@ body {
   letter-spacing: 0em;
   text-align: left;
   max-width: 1920px;
-  height: 100vh;
+  height: 100%;
   color: #fff;
   background: linear-gradient(168deg, rgba(135, 17, 168, 1) 1%, rgba(9, 9, 121, 1) 50%, rgba(0, 212, 255, 1) 100%);
 }
